# fluentUI-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_en_US.ts  example_zh_CN.ts  res.qrc
.cmake/: InstallerScript.iss.in  Version.h.in  version.rc.in
qml/: Main.qml
qml/fluentUI/global/: ItemsFooter.qml  ItemsOriginal.qml
qml/fluentUI/page/: T_Acrylic.qml  T_Buttons.qml  T_Carousel.qml  T_Clip.qml  T_FlipView.qml  T_Home.qml  T_TabView.qml  T_TableView.qml  T_Timeline.qml  T_TreeView.qml
qml/fluentUI/window/: AboutWindow.qml  CrashWindow.qml  MainWindow.qml
src/: main.cpp
src/fluentUI/: AppInfo.cpp
src/fluentUI/component/: CircularReveal.h  FileWatcher.h  FpsItem.h
src/fluentUI/helper/: InitalizrHelper.h  InitializrHelper.h  Log.cpp  Network.h  SettingsHelper.h  TranslateHelper.h
